--- a/css/style.css
+++ b/css/style.css
@@ -399,7 +399,7 @@ a.arrow-right:hover {
 }
 
 .share ul {
-	display: none;
+	opacity: 0;
 	background: #fff;
 	background: rgba(255,255,255,0.70);
 	border: 1px solid #000;
@@ -409,7 +409,7 @@ a.arrow-right:hover {
 }
 
 .share:hover ul {
-	display: block;
+	opacity: 1;
 }
 
 .share li {
