--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,8 @@ body {
 	-webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
-	padding: 20% 0;
+	padding: 0;
+	text-align: center;
 }
 
 h1.presentation-frame {
