--- a/css/style.css
+++ b/css/style.css
@@ -46,14 +46,19 @@
 
 }
 
-body {
+html, body {
 	font-family: 'museo_sans500';
-  height: 100%;
-  overflow: hidden;
+	height: 100%;
+	overflow: hidden;
 }
 
 .slides{
-  height: 800px;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	-webkit-perspective: 1200px;
+	-moz-perspective: 1200px;
+	perspective: 1200px;
 }
 
 .slides section {
@@ -61,7 +66,27 @@ body {
        -moz-box-sizing: border-box;
             box-sizing: border-box;
 	padding: 0;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
 	text-align: center;
+	overflow: hidden;
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-webkit-transform: translate3d(0, 0, 0);
+	-moz-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+}
+
+.v-center {
+	top: 50%;
+	position: relative;
 }
 
 h1.presentation-frame {
