--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,11 @@ html, body {
 	position: relative;
 }
 
+.initial {
+	background: radial-gradient(circle, #ffffff, #eeeeee)
+}
+
+
 h1.presentation-frame {
 	background: url(../img/moldura.png);
 	background: url(../img/moldura.png);
@@ -1573,7 +1578,52 @@ p.creator-subtitle {
 	background: #65A9B6;
 }
 
+/*********************************** Bloco Final **********************************************************************/
+/*
+	50
+*/
+.final {
+	background: radial-gradient(circle, #ffffff, #eeeeee)
+}
 
+.final h3 {
+	font-size: 30px;
+	font-family: 'museo_sans700';
+	color: #78C253;
+}
+
+.final p {
+	font-size: 24px;
+	line-height: 36px;
+	color: #000;
+	color: rgba(0,0,0,0.75);
+	padding-top: 1%;
+}
+
+/*
+	51
+*/
+
+/*
+	52
+*/
+h3.indice-title {
+	font-size: 25px;
+	color: #000;
+	color: rgba(0,0,0,0.75);
+	text-align: left;
+	margin: 0 2%;
+}
+
+.indice {
+	width: 96%;
+	margin: 2%;
+	text-align: left;
+}
+
+.indice li {
+	display: inline-block;
+}
 
 
 /*
@@ -1721,7 +1771,7 @@ a.arrow-right:hover {
 .share {
 	position: fixed;
 	right: 0;
-	bottom: 20px;
+	bottom: 15px;
 	z-index: 30;
 }
 
@@ -1742,7 +1792,7 @@ a.arrow-right:hover {
 .stamp {
 	position: fixed;
 	left: 20px;
-	bottom: 20px;
+	bottom: 15px;
 	width: 50px;
 	height: 24px;
 	z-index: 30;
@@ -1755,4 +1805,14 @@ a.arrow-right:hover {
 	color: rgba(0,0,0,0.75);
 	font-size: 16px;
 	text-decoration: none;
+}
+
+.menu {
+	position: fixed;
+	bottom: 15px;
+	left: 50%;
+	margin-left: -25px;
+	width: 30px;
+	height: 30px;
+	z-index: 30;
 }
